# pptx2pdfwasm

./: .gitignore  ExampleWasmer.py  ExampleWasmtime.py  README.md  convert_xlsx.py  presentacion.pptx  pyproject.toml  requirements.txt  script.py  setup.py
pptx2pdfwasm/: __init__.py  converter.py  server.py
pptx2pdfwasm/static/: index.html  soffice.data.js.metadata  soffice.js
tests/: test.pptx  test_converter.py
